feat: Add AI integration with Ollama for test data generation
- Implemented AI status endpoint to check availability of AI services.
- Integrated Ollama as the AI provider for generating test data.
- Updated application configuration to enable Ollama and set default model.
- Created PowerShell script to test Ollama integration and process execution.
- Enhanced BPMN parser to extract API information from task names.
- Updated report generation to include detailed execution results in JSON, CSV, and HTML formats.
- Added new test report files for recent executions.